cambio de index

--- a/Compras/Index.html
+++ b/Compras/Index.html
@@ -13,11 +13,11 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light header__nav" style="background-color: #d8dde6;">
                 <div class="container">
-                    <a id="logo" href="/Index.html">
+                    <a id="logo" href="/index.html">
                         <img class="header__logo"
                             src="/imagenes/MLA_LOGO.png"
                             alt="LOGO"
-                            href="Index.html"
+                            href="index.html"
                         />
                     </a>
                     <button
@@ -96,7 +96,7 @@
             <div class="container">
                 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/Index.html">MLAesports</a></li>
+                    <li class="breadcrumb-item"><a href="/index.html">MLAesports</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Compras</li>
                     </ol>
                 </nav>
@@ -158,7 +158,7 @@
             <div class="container footer_nav">
                 <div class="row">
                     <div class="col-xl-3 col-md-2 col-sm-2 text-center">
-                        <a  href="Index.html">
+                        <a  href="index.html">
                             <img class="footer__logo" id="logo"
                                 src="/imagenes/MLA_LOGO.png"
                                 alt="LOGO"
@@ -177,22 +177,22 @@
                         <img class="footer__img"
                             src="/imagenes/instagram.png"
                             alt="Instagram"
-                            href="Index.html"
+                            href="index.html"
                         />
                         <img class="footer__img"
                             src="/imagenes/facebook.png"
                             alt="Facebook"
-                            href="Index.html"
+                            href="index.html"
                         />
                         <img class="footer__img"
                             src="/imagenes/Twitter.png"
                             alt="Twitter"
-                            href="Index.html"
+                            href="index.html"
                         />
                         <img class="footer__img"
                             src="/imagenes/youtube.png"
                             alt="Youtube"
-                            href="Index.html"
+                            href="index.html"
                         />
                         </div>
                     </div>
@@ -201,30 +201,4 @@
             </div>
         </footer>
     </body>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-        <div class="modal-header">
-            <h5 class="modal-title fw-light" id="exampleModalLabel">Ingreso</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <div class="input-group mb-3">
-                <span class="input-group-text fw-light col-3 col-md-3" id="basic-addon1">Usuario:</span>
-                <input type="text" class="form-control fw-light input1" placeholder="Escriba aqui" aria-label="Usuario" aria-describedby="basic-addon1">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text fw-light col-3 col-md-3" id="basic-addon1">Contraseña:</span>
-                <input type="password" class="form-control fw-light input1" placeholder="Escriba aqui" aria-label="Contraseña" aria-describedby="basic-addon1">
-            </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-primary fw-light" data-bs-dismiss="modal" >Ingresar</button>
-            <button type="button" class="btn btn-secondary fw-light" data-bs-dismiss="modal">Salir</button>
-        </div>
-        </div>
-    </div>
-</div>
-
 </html>
