--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,11 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light header__nav" style="background-color: #d8dde6;">
                 <div class="container">
-                    <a id="logo" href="Index.html">
+                    <a id="logo" href="index.html">
                         <img class="header__logo"
                             src="imagenes/MLA_LOGO.png"
                             alt="LOGO"
-                            href="Index.html"
+                            href="index.html"
                         />
                     </a>
                     <button
@@ -204,7 +204,7 @@
             <div class="container footer_nav">
                 <div class="row">
                     <div class="col-xl-3 col-md-2 col-sm-2 text-center">
-                        <a  href="Index.html">
+                        <a  href="index.html">
                             <img class="footer__logo" id="logo"
                                 src="imagenes/MLA_LOGO.png"
                                 alt="LOGO"
@@ -223,22 +223,22 @@
                         <img class="footer__img"
                             src="imagenes/instagram.png"
                             alt="Instagram"
-                            href="Index.html"
+                            href="index.html"
                         />
                         <img class="footer__img"
                             src="imagenes/facebook.png"
                             alt="Facebook"
-                            href="Index.html"
+                            href="index.html"
                         />
                         <img class="footer__img"
                             src="imagenes/Twitter.png"
                             alt="Twitter"
-                            href="Index.html"
+                            href="index.html"
                         />
                         <img class="footer__img"
                             src="imagenes/youtube.png"
                             alt="Youtube"
-                            href="Index.html"
+                            href="index.html"
                         />
                         </div>
                     </div>
