--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>MLA Esports: La mejor organizacion de Esports en Argentina</title>
+        <title>MLA Esports: La mejor organizacion de Esports en Argentina y Latinoamerica</title>
         <meta name="description" content= "MLA Esports es una organización de 5 años que es mundialmente conocida por la escena de los Esports y el entretenimiento. Tiene a los mejores jugadores, streamers y creadores de contenido Argentinos."/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="keywords" content= "MLA, MLAesports, Esports, juegos, CSGO, LOL, Valorant, Rocket League, Argentina Esports">
