--- a/Compras/index.html
+++ b/Compras/index.html
@@ -107,14 +107,13 @@
             <section class="container section__compras">
                 <div class="row">
                     <div class="col-xl-3 col-md-6 d-flex justifify-content-center">
-                        <div>
-                            <img class="section__compras--img"
-                                src="/imagenes/sillagamer.PNG"
-                                alt="SillaGamer"
-                            />
-                            <p class="section__compras__letra--1 fw-light">
-                                Silla gamer MLA $10000.
-                            </p>
+                        <div class="card" style="width: 18rem;">
+                            <img src="/imagenes/sillagamer.PNG" class="card-img-top" alt="SillaGamer">
+                        <div class="card-body">
+                            <h5 class="card-title section__compras__letra--1 fw-light">Silla gamer MLA $10000.</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-secondary fw-light">Go somewhere</a>
+                        </div>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-6 d-flex justifify-content-center">
