--- a/Compras/index.html
+++ b/Compras/index.html
@@ -13,9 +13,9 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light header__nav" style="background-color: #d8dde6;">
                 <div class="container">
-                    <a id="logo" href="/index.html">
+                    <a id="logo" href="../index.html">
                         <img class="header__logo"
-                            src="/imagenes/MLA_LOGO.png"
+                            src="../imagenes/MLA_LOGO.png"
                             alt="LOGO"
                             href="index.html"
                         />
@@ -30,15 +30,15 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="Iconos">
                         <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="/Equipos/">Equipos </a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Compras/">Compras </a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Novedades/">Novedades </a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Empresa/">Empresa </a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Contacto/">Contacto </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Equipos/">Equipos </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Compras/">Compras </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Novedades/">Novedades </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Empresa/">Empresa </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Contacto/">Contacto </a></li>
                         <li class="nav-item">
                             <a class="nav-link" id="enter" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             <img class="header__iconos"
-                                src="/imagenes/enter.png"
+                                src="../imagenes/enter.png"
                                 alt="enter"
                             />
                             </a>
@@ -47,7 +47,7 @@
                             <a class="nav-link"
                             id="carrito" href=".html">
                                 <img class="header__iconos"
-                                    src="/imagenes/carrito.png"
+                                    src="../imagenes/carrito.png"
                                     alt="carrito"
                                 />
                             </a> 
@@ -56,7 +56,7 @@
                             <a class="nav-link"
                             id="buscar" href=".html">
                                 <img class="header__iconos"
-                                    src="/imagenes/buscar.png"
+                                    src="../imagenes/buscar.png"
                                     alt="Buscar"
                                     href=".html"
                                 />
@@ -96,7 +96,7 @@
             <div class="container">
                 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/index.html">MLAesports</a></li>
+                    <li class="breadcrumb-item"><a href="../index.html">MLAesports</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Compras</li>
                     </ol>
                 </nav>
@@ -108,45 +108,42 @@
                 <div class="row">
                     <div class="col-xl-3 col-md-6 d-flex justifify-content-center">
                         <div class="card" style="width: 18rem;">
-                            <img src="/imagenes/sillagamer.PNG" class="card-img-top" alt="SillaGamer">
+                            <img src="../imagenes/sillagamer.PNG" class="card-img-top" alt="sillaGamer">
                         <div class="card-body">
-                            <h5 class="card-title section__compras__letra--1 fw-light">Silla gamer MLA $10000.</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-secondary fw-light">Go somewhere</a>
+                            <h5 class="card-title section__compras__letra--1 fw-light">Silla gamer MLA</h5>
+                            <p class="card-text">$10000</p>
+                            <a href="#" class="btn btn-secondary fw-light">Añadir al carrito</a>
                         </div>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-6 d-flex justifify-content-center">
-                        <div>
-                            <img class="section__compras--img"
-                                src="/imagenes/mousegamer.PNG"
-                                alt="MouseGamer"
-                            />
-                            <p class="section__compras__letra--2 fw-light">
-                                Mouse gamer MLA $10000.
-                            </p>
+                        <div class="card" style="width: 18rem;">
+                            <img src="../imagenes/mousegamer.PNG" class="card-img-top" alt="mouseGamer">
+                        <div class="card-body">
+                            <h5 class="card-title section__compras__letra--1 fw-light">Mouse gamer MLA</h5>
+                            <p class="card-text">$5000</p>
+                            <a href="#" class="btn btn-secondary fw-light">Añadir al carrito</a>
                         </div>
-                        </div>
-                    <div class="col-xl-3 col-md-6 d-flex justifify-content-center">
-                        <div>
-                            <img class="section__compras--img"
-                                src="/imagenes/mousepadgamer.PNG"
-                                alt="MousepadGamer"
-                            />
-                            <p class="section__compras__letra--3 fw-light">
-                                Mousepad gamer MLA $10000.
-                            </p>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-6 d-flex justifify-content-center">
-                        <div>
-                            <img class="section__compras--img"
-                                src="/imagenes/monitorgamer.jpg"
-                                alt="MonitorGamer"
-                            />
-                            <p class="section__compras__letra--4 fw-light">
-                                Monitor gamer MLA $10000.
-                            </p>
+                        <div class="card" style="width: 18rem;">
+                            <img src="../imagenes/mousepadgamer.PNG" class="card-img-top" alt="mousepadGamer">
+                        <div class="card-body">
+                            <h5 class="card-title section__compras__letra--1 fw-light">Mousepad gamer MLA</h5>
+                            <p class="card-text">$2000</p>
+                            <a href="#" class="btn btn-secondary fw-light">Añadir al carrito</a>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6 d-flex justifify-content-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../imagenes/monitorgamer.jpg" class="card-img-top" alt="monitorGamer">
+                        <div class="card-body">
+                            <h5 class="card-title section__compras__letra--1 fw-light">Monitor gamer MLA</h5>
+                            <p class="card-text">$50000</p>
+                            <a href="#" class="btn btn-secondary fw-light">Añadir al carrito</a>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -159,7 +156,7 @@
                     <div class="col-xl-3 col-md-2 col-sm-2 text-center">
                         <a  href="index.html">
                             <img class="footer__logo" id="logo"
-                                src="/imagenes/MLA_LOGO.png"
+                                src="../imagenes/MLA_LOGO.png"
                                 alt="LOGO"
                             />
                         </a>
@@ -174,12 +171,12 @@
                         <div>
                         <h3 class="fs-6 fw-light">Redes Sociales</h3>
                         <img class="footer__img"
-                            src="/imagenes/instagram.png"
+                            src="../imagenes/instagram.png"
                             alt="Instagram"
                             href="index.html"
                         />
                         <img class="footer__img"
-                            src="/imagenes/facebook.png"
+                            src="../imagenes/facebook.png"
                             alt="Facebook"
                             href="index.html"
                         />
@@ -189,7 +186,7 @@
                             href="index.html"
                         />
                         <img class="footer__img"
-                            src="/imagenes/youtube.png"
+                            src="../imagenes/youtube.png"
                             alt="Youtube"
                             href="index.html"
                         />
