--- a/Compras/index.html
+++ b/Compras/index.html
@@ -6,8 +6,8 @@
         <meta name="description" content= "MLA Esports es una organización de 5 años que es mundialmente conocida por la escena de los Esports y el entretenimiento. Tiene a los mejores jugadores, streamers y creadores de contenido Argentinos."/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="keywords" content= "MLA, MLAesports, Esports, juegos, CSGO, LOL, Valorant, Rocket League, Argentina Esports">
-        <link rel="stylesheet" href="/css/style.css">
-        <script src="/bootstrap/dist/js/bootstrap.js"></script>
+        <link rel="stylesheet" href="../css/style.css">
+        <script src="../bootstrap/dist/js/bootstrap.js"></script>
     </head>
     <body style="background-color: #ffffff;">
         <header class="header">
