--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -6,16 +6,16 @@
         <meta name="description" content= "MLA Esports es una organización de 5 años que es mundialmente conocida por la escena de los Esports y el entretenimiento. Tiene a los mejores jugadores, streamers y creadores de contenido Argentinos."/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="keywords" content= "MLA, MLAesports, Esports, juegos, CSGO, LOL, Valorant, Rocket League, Argentina Esports">
-        <link rel="stylesheet" href="/css/style.css">
-        <script src="/bootstrap/dist/js/bootstrap.js"></script>
+        <link rel="stylesheet" href="../css/style.css">
+        <script src="../bootstrap/dist/js/bootstrap.js"></script>
     </head>
     <body style="background-color: #ffffff;">
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light header__nav" style="background-color: #d8dde6;">
                 <div class="container">
-                    <a id="logo" href="/index.html">
+                    <a id="logo" href="../index.html">
                         <img class="header__logo"
-                            src="/imagenes/MLA_LOGO.png"
+                            src="../imagenes/MLA_LOGO.png"
                             alt="LOGO"
                             href="index.html"
                         />
@@ -38,7 +38,7 @@
                         <li class="nav-item">
                             <a class="nav-link" id="enter" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             <img class="header__iconos"
-                                src="/imagenes/enter.png"
+                                src="../imagenes/enter.png"
                                 alt="enter"
                             />
                             </a>
@@ -47,7 +47,7 @@
                             <a class="nav-link"
                             id="carrito" href=".html">
                                 <img class="header__iconos"
-                                    src="/imagenes/carrito.png"
+                                    src="../imagenes/carrito.png"
                                     alt="carrito"
                                 />
                             </a> 
@@ -56,7 +56,7 @@
                             <a class="nav-link"
                             id="buscar" href=".html">
                                 <img class="header__iconos"
-                                    src="/imagenes/buscar.png"
+                                    src="../imagenes/buscar.png"
                                     alt="Buscar"
                                     href=".html"
                                 />
@@ -96,7 +96,7 @@
             <div class="container">
                 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/index.html">MLAesports</a></li>
+                    <li class="breadcrumb-item"><a href="../index.html">MLAesports</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Contacto</li>
                     </ol>
                 </nav>
@@ -151,7 +151,7 @@
                     <div class="col-xl-3 col-md-2 col-sm-2 text-center">
                         <a  href="index.html">
                             <img class="footer__logo" id="logo"
-                                src="/imagenes/MLA_LOGO.png"
+                                src="../imagenes/MLA_LOGO.png"
                                 alt="LOGO"
                             />
                         </a>
@@ -166,12 +166,12 @@
                         <div>
                         <h3 class="fs-6 fw-light">Redes Sociales</h3>
                         <img class="footer__img"
-                            src="/imagenes/instagram.png"
+                            src="../imagenes/instagram.png"
                             alt="Instagram"
                             href="index.html"
                         />
                         <img class="footer__img"
-                            src="/imagenes/facebook.png"
+                            src="../imagenes/facebook.png"
                             alt="Facebook"
                             href="index.html"
                         />
@@ -181,7 +181,7 @@
                             href="index.html"
                         />
                         <img class="footer__img"
-                            src="/imagenes/youtube.png"
+                            src="../imagenes/youtube.png"
                             alt="Youtube"
                             href="index.html"
                         />
