--- a/Equipos/index.html
+++ b/Equipos/index.html
@@ -30,11 +30,11 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="Iconos">
                         <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="/Equipos/">Equipos </a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Compras/">Compras </a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Novedades/">Novedades </a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Empresa/">Empresa </a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Contacto/">Contacto </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Equipos/">Equipos </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Compras/">Compras </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Novedades/">Novedades </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Empresa/">Empresa </a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Contacto/">Contacto </a></li>
                         <li class="nav-item">
                             <a class="nav-link" id="enter" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             <img class="header__iconos"
