--- a/Compras/index.html
+++ b/Compras/index.html
@@ -181,7 +181,7 @@
                             href="index.html"
                         />
                         <img class="footer__img"
-                            src="/imagenes/Twitter.png"
+                            src="../imagenes/Twitter.png"
                             alt="Twitter"
                             href="index.html"
                         />
