--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -176,7 +176,7 @@
                             href="index.html"
                         />
                         <img class="footer__img"
-                            src="/imagenes/Twitter.png"
+                            src="../imagenes/Twitter.png"
                             alt="Twitter"
                             href="index.html"
                         />
