--- a/Novedades/index.html
+++ b/Novedades/index.html
@@ -114,7 +114,7 @@
                     <div class="col-xl-8 col-md-6 col-sm-12 text-center">
                         <div>
                         <p class="novedades__letra1 fw-light">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui necessitatibus, molestias repellendus sed accusamus magni dolorem aut exercitationem cum sequi velit, expedita, voluptatem harum itaque nihil laborum atque fuga blanditiis.
+                            El mundial de League of Legends comienza el 28 de Octubre. MLA se encuentra entre los clasificados para jugar el regional que le permitira ingresar a la pre clasificatoria del mismo. Les pedimos que nos apoyen dando aliento al team.
                         </p>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                     <div class="col-xl-8 col-md-6 col-sm-12 text-center">
                         <div>
                         <p class="novedades__letra2 fw-light">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui necessitatibus, molestias repellendus sed accusamus magni dolorem aut exercitationem cum sequi velit, expedita, voluptatem harum itaque nihil laborum atque fuga blanditiis.
+                            Como ya saben el mundial de Valorant esta muy cerca, estamos 4 en la tabla y eso nos permite avanzar en los playoffs de esta season. Conviertete en uno de nosotros y sigue al equipo en la fase final.
                         </p>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                     <div class="col-xl-8 col-md-6 col-sm-12 text-center">
                         <div>
                         <p class="novedades__letra3 fw-light">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui necessitatibus, molestias repellendus sed accusamus magni dolorem aut exercitationem cum sequi velit, expedita, voluptatem harum itaque nihil laborum atque fuga blanditiis.
+                            La liga CSGO ya comenzo en Junio y te lo vas a perder? Acompaña a nuestros veteranos Kiwu y Zel juntos a los nuevos Rookies que empezaron este año para ganarle a los equipos Top tier de esta season la lista. Es un camino dificil pero nuestra comunidad lo puede hacer.
                         </p>
                         </div>
                     </div>
