--- a/Empresa/index.html
+++ b/Empresa/index.html
@@ -106,7 +106,7 @@
                     <h1 class="fw-light">Empresa</h1>
                 </div>
             </section>
-            <section class="container sectionEmpresa">
+            <section class="container sectionEmpresa p-3">
                 <div class="row">
                     <div class="col-xl-1 col-md-1 text-center">
                     <img class="sectionEmpresa__logo"
