--- a/Empresa/index.html
+++ b/Empresa/index.html
@@ -120,9 +120,14 @@
                     </div>
                 </div>
             </section>
-            <section >
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1380.9435944225063!2d-58.63589445053791!3d-34.59263165300024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1626396940085!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </section>
+            <section class="container text-center">
+                <div class="fs-1 fw-light">
+                    <p>Ubicacion</p>
+                </div>
+                <div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1641.485756140956!2d-58.44870274173017!3d-34.63016018809051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca316b4f75b7%3A0xa3e2fb2cfef1549f!2sAv.%20Directorio%201460%2C%20C1406GZQ%20CABA!5e0!3m2!1ses!2sar!4v1626397463902!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+        </section>
         </main>
         <br>
         <footer class="footer" style="background-color: #d8dde6;">
